--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title></title>
+    <script src="js/render-rules/polygon-rule.js"></script>
+    <script src="js/render-rules/cubic-bezier-rule.js"></script>
+    <script src="js/render-rules/rectangle-rule.js"></script>
+    <script src="js/render-rules/circle-rule.js"></script>
+    <script src="js/shape-renderer.js"></script>
     <script src="js/graphical-application.js"></script>
     <script src="js/shape.js"></script>
     <script src="js/test.js"></script>
