--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <title></title>
+    <script src="js/lib/doctrine.js"></script>
+    <script src="js/lib/registerjs/register.js"></script>
+    <script src="js/lib/registerjs/registerclass.js"></script>
+    <script src="js/lib/registerjs/validator.js"></script>
     <script src="js/render-rules/polygon-rule.js"></script>
     <script src="js/render-rules/cubic-bezier-rule.js"></script>
     <script src="js/render-rules/rectangle-rule.js"></script>
